angular21-remove provide httpclient without defining in the appconfig

--- a/src/app/test/test.html
+++ b/src/app/test/test.html
@@ -1,1 +1,9 @@
-<p>test works!</p>
+<div>
+    <ul>
+        @for(list of userList; track list.id){
+            <li>
+                {{list.username}} - {{list.email}}
+            </li>
+        }
+    </ul>
+</div>
